--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -36,3 +22,23 @@
     transform: rotate(360deg);
   }
 }
+
+  .wrapper {
+    grid-template-columns: repeat(10, 1fr);
+    margin: auto;
+    display: grid;
+    width: fit-content;
+  }
+
+  .cell{
+    border: 1px solid gray;
+    padding: 10px;
+  }
+
+  .active{
+    background-color: grey;
+  }
+
+  .button{
+    margin: auto;
+  }
